--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -5,8 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/cloudinary-video-player@2.3.1/dist/cld-video-player.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
+    <script src="https://cdn.jsdelivr.net/npm/cloudinary-video-player@2.3.1/dist/cld-video-player.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
